# oai-pmh

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/pdoc/: oai_pmh_client.html  search.js
notebooks/: arxiv_recent_changes.ipynb
src/oai_pmh_client/: __init__.py  client.py  exceptions.py  models.py
src/oai_pmh_client.egg-info/: PKG-INFO  requires.txt
tests/: test_client.py
tests/data/: list_records_with_deletion.xml  record_no_header.xml
