[project]
name = "oai-pmh-client"
version = "1.0.0"
description = "A modern Python client for OAI-PMH (Open Archives Initiative Protocol for Metadata Harvesting)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "lxml",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pdoc",
    "pytest-httpx",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (makes network requests)",
]
pythonpath = [
    "src",
]

[dependency-groups]
dev = [
    "pdoc",
    "pytest",
    "pytest-httpx",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[tool.mypy]
python_version = "3.12"
exclude = [
    "build/",
]

[[tool.mypy.overrides]]
module = [
    "lxml",
    "lxml.*",
    "pytest",
    "pytest_httpx",
]
ignore_missing_imports = true
